# welsib-verifier-linux-gtk4

./: Cargo.toml  README  build.rs
src/: lib.rs  main.rs
src/welsib-verifier/: main.rs  ru.welsib.verifier.gschema.xml
src/welsib-verifier/resources/: resources.gresource.xml  window.ui
src/welsib-verifier/window/: imp.rs  mod.rs
test/: init_json.txt  linux-cli  public.key  test.txt.sig  test_agg_signature.hex.txt
