cargo-features = ["edition2024"]

[package]
name = "welsib-public"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "welsib-verifier"
path = "src/welsib-verifier/main.rs"

[[bin]]
name = "welsib-example"
path = "src/main.rs"

[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
rpath = true

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
base64 = "0.22.1"
gio = "0.20.1"
glib = "0.20.3"
glob = "0.3.1"
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[build-dependencies]
glib-build-tools = "0.20"
